--- a/wp-content/themes/understrap-child/sass/child-theme.scss
+++ b/wp-content/themes/understrap-child/sass/child-theme.scss
@@ -53,6 +53,9 @@
 @import "theme/partials/background_styles";
 @import "theme/partials/services_styles";
 @import "theme/partials/marketing_styles";
+@import "theme/partials/perspective";
+@import "theme/partials/agile";
+@import "theme/partials/beliefs";
 @import"theme/partials/justification_styles";
 @import "theme/partials/style_tweaks";
 
