--- a/wp-content/themes/understrap-child/sass/theme/partials/variables/_theme_color_and_nav_variables.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/variables/_theme_color_and_nav_variables.scss
@@ -18,7 +18,8 @@ $magic-mint:                           #A9FFCB;
 $ash-gray:                             #B3BFBF;
 $gunmetal-gray:                        #708787;
 $gunmetal:                             rgba(45, 58, 58, 1);
-
+$rich-primary:                           darken(#daeaf7, 40%);
+$deep-primary:                           darken(#daeaf7, 80%);
 
 $int-orange:                           #ba1200;
 
