--- a/wp-content/themes/understrap-child/sass/theme/partials/_background_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_background_styles.scss
@@ -10,7 +10,7 @@
 }
 
 
-
+ 
 
 .background__splash-pagination{
   margin-top: auto;
@@ -164,8 +164,8 @@ max-width: 100%;
     // flex: 0 0 24%;
     // max-width: 24%;
     height: 24em;
-    // background: lighten($color: $primary, $amount: 5%);
-    background: lighten($color: green, $amount: 5%);
+    background: lighten($color: $primary, $amount: 5%);
+//     background: lighten($color: green, $amount: 5%);
 
     border: 1px $primary solid;
   }
@@ -184,6 +184,7 @@ max-width: 100%;
   flex: 1 0 100%;
 @include mq('tablet-wide'){
   flex: 0 0 66.65%;
+  padding: 4%;
 }
 }
 
@@ -193,6 +194,8 @@ max-width: 100%;
   justify-content: center;
   align-items: center;
   align-content: center;
+    padding: 4%;
+}
 > a.link__text{
   display: flex;
   flex: 0 0 auto;
@@ -200,7 +203,6 @@ max-width: 100%;
   justify-content: center;
   align-items: center;
 
-}
 }
 
 
@@ -327,9 +329,13 @@ max-width: 100%;
 .copy.categories__copy-container{
   @include vr($margin-top: 1, $margin-bottom: 2);
   @include mq('tablet'){
-    @include container();
     @include vr($margin-bottom: 5);
-  }
+       }
+     @include mq('tablet-wide'){
+      width: 74%;
+      max-width: 74%;
+      }
+
 }
 
 
@@ -354,6 +360,10 @@ max-width: 100%;
 .categories__content_image{
   border-top: 2px solid $black;
   border-bottom: 2px solid $black;
+  @include mq('tablet'){
+    border-top: none;
+  border-bottom: none;
+  }
 
 }
 
