--- a/wp-content/themes/understrap-child/sass/theme/partials/_homepage_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_homepage_styles.scss
@@ -1424,13 +1424,12 @@ margin: 0;
 .proof__section--header{
 width: 100%;
 max-width: 100%;
-height: 31vh;
+height: 50em;
 display: flex;
-min-height: 32vh;
 text-align: center;
 justify-content: center;
 align-items: center;
-background: $primary;
+background: $secondary;
 border-top: 6em solid $white;
 // align-content: center;
 // background: $primary;
@@ -1575,8 +1574,8 @@ text-align: center;
     padding-left: 16%;
   }
   @include mq('tablet-wide'){
-    height: 75vh;
-    min-height: 75vh;
+    height: 110vh;
+    min-height: 110vh;
     // padding-left: 23%;
   }
   @include mq('desktop'){
@@ -1646,11 +1645,13 @@ align-self: baseline;
     @include mq('tablet-wide'){
     width: 61%;
     max-width: 61%;
+
     }
     @include mq('desktop'){
       width: 61%;
       max-width: 61%;
       flex: 1 1 auto;
+ 
     }
     @include mq('desktop-hd'){
       // width: 100%;
@@ -1692,6 +1693,7 @@ align-self: baseline;
   min-height: 2em;
   font-family: $font-family-sans-serif;
   align-self: flex-start;
+  margin-top: 3rem;
 }
 
 .end2end__article-wrapper{
@@ -1795,7 +1797,7 @@ align-items: center;
 justify-content: center;
   height: 12em;
   flex: 1 1 auto;
- 
+}
  
 @include mq('tablet'){
 min-height: 12em;
@@ -1803,6 +1805,8 @@ min-height: 12em;
 @include mq('tablet-wide'){
   height: 12em;
 }
+@include mq('desktop'){
+    height: 32em;
 }
 
 .silo-bell{
@@ -3578,6 +3582,9 @@ max-width: 83%;
     font-weight: 300;
     @include vr($font-size: 2, $line-height: 2, $margin-top: .5, $margin-bottom: .5);
     color: $gray-700;
+     @include mq('desktop') {
+     
+     }
   }
   .link__text{
     min-height: 1.5em;
